--- a/DotaLeague/DotaLeague/Views/League/LeagueQueue.cshtml
+++ b/DotaLeague/DotaLeague/Views/League/LeagueQueue.cshtml
@@ -40,7 +40,7 @@
                             <tbody>
                                 @foreach(var player in Model.PlayersInQueue) 
                                 {
-                                    <tr id="@player.PlayerId">
+                                    <tr id="playerrow-@player.PlayerId">
                                         <td>
                                             #
                                         </td>
@@ -69,6 +69,7 @@
     </div>
 </div>
 
+@*premestiti u js file*@
 <script>
     function LeaveQueue() {
         $.ajax({
@@ -107,7 +108,7 @@
 
         console.log(userDTO);
         var row = table.insertRow();
-        row.id = userDTO.playerId;
+        row.id = 'playerrow-'+userDTO.playerId;
 
         var cell1 = row.insertCell(0);
         cell1.innerHTML = "#";
@@ -124,7 +125,7 @@
 
     function UserDeQueued(playerId) {
         console.log(playerId);
-        var row = document.getElementById(playerId);
+        var row = document.getElementById('playerrow-'+playerId);
         row.parentNode.removeChild(row);
     }
 </script>
