--- a/DotaLeague/DotaLeague/Views/Player/Index.cshtml
+++ b/DotaLeague/DotaLeague/Views/Player/Index.cshtml
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12 col-md-12">
+        <div class="col-lg-10 col-md-10">
             <div class="card">
                 <div class="card-header text-center">
                     <h3 class="card-title">@ViewData["Title"]</h3>
@@ -75,7 +75,8 @@
                                         @Html.DisplayFor(modelItem => item.Dislikes)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Details", "Details", new { email = item.Email })
+                                        <a href="/Player/details?email=@item.Email" 
+                                           class="btn btn-info">Details</a>
                                     </td>
                                 </tr>
                             }
